# ROS2_Coding_Challenge

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  entrypoint.sh  ros-env.service  setup-runtime-dir.service  system.conf
workspace/: install_systemd_service.sh
workspace/src/diffdrive_2_acker/: package.xml  setup.cfg  setup.py
workspace/src/diffdrive_2_acker/diffdrive_2_acker/: module.py
workspace/src/diffdrive_2_acker/systemd/: diffdrive_2_acker.service
